[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
description = "TUI for mq, a jq-like Markdown processing tool"
documentation = "https://mqlang.org/book/"
edition = "2024"
name = "mqt"
readme = "README.md"
repository = "https://github.com/harehare/mqt"
version = "0.1.0"

[dependencies]
arboard = {version = "3.6.1", default-features = false}
clap = {version = "4.5.23", features = ["derive"]}
crossterm = "0.29.0"
itertools = "0.14.0"
log = "0.4.28"
miette = {version = "7.6.0", features = ["fancy"]}
mq-lang = {git = "https://github.com/harehare/mq.git", package = "mq-lang"}
mq-markdown = {git = "https://github.com/harehare/mq.git", package = "mq-markdown"}
ratatui = "0.29.0"
unicode-width = "0.2.0"
